# typing_challenges

./: .gitignore  constants.py  pyproject.toml
level_1/: 1.py  10.py  2.py  3.py  4.py  5.py  6.py  7.py  8.py  9.py  __init__.py  adult_ages_by_countries.txt
level_2/: 1.py  10.py  2.py  3.py  4.py  5.py  6.py  7.py  8.py  9.py
level_3/: 1.py  2.py  3.py
