[tool.poetry]
name = "typing-challenges"
version = "0.1.0"
description = ""
authors = ["pekshevds <pekshev.ds@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.linters.dependencies]
mypy = "^1.11.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
